Changed new things

--- a/categories.html
+++ b/categories.html
@@ -3,12 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard - Categories</title>
+  <title>Categories Management</title>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header>
-    <h1>Dashboard - Categories</h1>
+    <h1>Categories Management</h1>
+    <nav>
+      <ul class="nav-menu">
+        <li><a href="./index.html">Dashboard</a></li>
+        <li><a href="./products.html">Products</a></li>
+        <li><a href="./users.html">Users</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <button id="addCategory">Add Category</button>
