--- a/products.html
+++ b/products.html
@@ -3,12 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard - Products</title>
+  <title>Manage Products</title>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header>
-    <h1>Dashboard - Products</h1>
+    <h1>Products Management</h1>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Dashboard</a></li>
+        <li><a href="./categories.html">Categories</a></li>
+        <li><a href="./users.html">Users</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <button id="addProduct">Add Product</button>
