--- a/categories.html
+++ b/categories.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Categories Management</title>
+  <title>Manage Categories</title>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header>
-    <h1>Categories Management</h1>
+    <h1>Manage Categories</h1>
     <nav>
-      <ul class="nav-menu">
+      <ul>
         <li><a href="./index.html">Dashboard</a></li>
         <li><a href="./products.html">Products</a></li>
         <li><a href="./users.html">Users</a></li>
