--- a/users.html
+++ b/users.html
@@ -3,24 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard - Users</title>
+  <title>Manage Users</title>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header>
-    <h1>Dashboard - Users</h1>
+    <h1>Manage Users</h1>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Dashboard</a></li>
+        <li><a href="./products.html">Products</a></li>
+        <li><a href="./categories.html">Categories</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <table id="userTable">
       <thead>
         <tr>
-          <th>Name</th>
+          <th>Username</th>
           <th>Email</th>
-          <th>Actions</th>
         </tr>
       </thead>
-      <tbody>
-      </tbody>
+      <tbody></tbody>
     </table>
   </main>
   <script src="./js/users.js"></script>
