--- a/categories.html
+++ b/categories.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
   <main>
-    <button id="addCategory">Add Category</button>
+    <button id="addCategory" onclick="addCategory(prompt('Enter category name:'))">Add Category</button>
     <table id="categoryTable">
       <thead>
         <tr>
