--- a/users.html
+++ b/users.html
@@ -23,6 +23,7 @@
         <tr>
           <th>Username</th>
           <th>Email</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody></tbody>
